--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="logo.jpg">
-    <title>temiraliyevm</title>
+    <title>Portfolio</title>
 </head>
 
 <body>
